force-app/main/default/objects/Email_Template__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <description>Body of the email being sent.</description>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Subject of the email.</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Email Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Email Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>